--- a/app/src/main/res/layout/fragment_area.xml
+++ b/app/src/main/res/layout/fragment_area.xml
@@ -9,6 +9,13 @@
     android:layout_marginTop="10dp"
     android:gravity="center"
     android:orientation="vertical">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="15sp"
+        android:text="From"
+        android:background="@android:color/holo_green_light"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,7 +57,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="25sp"
+        android:textSize="15sp"
         android:text="="
         android:background="@android:color/holo_green_light"/>
 
