--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,9 +7,8 @@
         <item name="colorControlActivated">@color/white</item>
         <item name="windowActionModeOverlay">true</item>
         <item name="actionModeBackground">@color/white</item>
-        <item name="colorPrimary">@android:color/holo_green_light</item>
-        <item name="android:textColorHint">@android:color/holo_green_light</item>
-        <item name="android:textColorHighlight">@android:color/holo_green_light</item>
+
+        <item name="android:textColorSecondary">@color/white</item>
     </style>
 
 </resources>
